--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -22,19 +22,24 @@ body {
     height: 100%;
 }
 
-.main {
-    max-width: 100vw;
-    overflow: hidden;
+.section {
+    width: calc(100% - 88px);
+    margin-left: 88px;
+    @include media-m {
+        width: 100%;
+        margin-left: 0;
+    }
 }
 
 .wrapper {
     max-width: 1746px;
     padding: 0 103px;
     margin: 0 auto;
+    position: relative;
     @include media-xxxl {
         margin: 0 0 0 auto;
     }
-    @include media-m {
+    @include media-xl {
         padding: 0 40px;
     }
 
@@ -48,7 +53,7 @@ body {
             padding: 0 0 0 103px;
             margin: 0 0 0 auto;
         }
-        @include media-m {
+        @include media-xl {
             padding: 0 0 0 40px !important;
         }
     }
@@ -62,6 +67,9 @@ body {
     margin-bottom: 180px;
     position: relative;
     display: inline-flex;
+    @include media-xl {
+        margin-bottom: 120px;
+    }
     @include media-m {
         margin-bottom: 100px;
         font-size: rem(82);
