--- a/src/assets/scss/modules/__sidebar.scss
+++ b/src/assets/scss/modules/__sidebar.scss
@@ -13,7 +13,7 @@
         height: 0;
         width: 100%;
         overflow: hidden;
-        transition: all .3s ease;
+        transition: all 0.3s ease;
         border-radius: 0 0 100% 100%;
     }
 
@@ -21,17 +21,9 @@
         width: 0;
     }
 
-    &:hover {
-        .navbar {
-            max-width: 392px;
-            @include media-m {
-                max-width: none;
-            }
-        }
-    }
-
     &__wrapp {
         padding: 180px 32px 0;
+        transition: all 0.3s ease;
         @include media-m {
             padding: 16px;
         }
@@ -42,6 +34,57 @@
             border-radius: 0;
             height: calc(100vh - 64px);
             overflow: auto;
+        }
+
+        .navbar {
+            overflow: visible;
+
+            &__item {
+                &_time {
+                    .navbar__icon{
+                        &::after {
+                            @include media-m {
+                                top: calc(50% - 45px);
+                                left: calc(50% - 45px);
+                                width: 90px;
+                                height: 90px;
+                                opacity: 1;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    &:hover {
+        .navbar {
+            max-width: 392px;
+            overflow: visible;
+            @include media-m {
+                max-width: none;
+            }
+
+            &__item {
+                &_time {
+                    .navbar__icon{
+                        &::after {
+                            top: calc(50% - 45px);
+                            left: calc(50% - 45px);
+                            width: 90px;
+                            height: 90px;
+                            opacity: 1;
+                        }
+                    }
+                }
+            }
+        }
+
+        .sidebar__wrapp {
+            padding: 180px 100px 0;
+            @include media-m {
+                padding: 0;
+            }
         }
     }
 }
@@ -105,6 +148,58 @@
             p {
                 &::after {
                     width: 100%;
+                }
+            }
+        }
+
+        &_time {
+            margin-top: 84px;
+            @include media-m {
+                margin-top: 50px;
+                margin-left: 34px;
+            }
+
+            .navbar__icon {
+                position: relative;
+                max-width: 24px;
+                max-height: 24px;
+
+                svg {
+                    max-width: 100%;
+                    max-height: 100%;
+                }
+
+                &::after {
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    top: calc(50% - 45px);
+                    left: calc(50% - 45px);
+                    width: 90px;
+                    height: 90px;
+                    transition: all 0.1s ease;
+                    background: url(/assets/img/cloak.svg);
+                    opacity: 0;
+                }
+            }
+
+            p {
+                font-size: 14px;
+                margin-left: 53px;
+                font-weight: normal;
+                font-size: 14px;
+                line-height: 1.5;
+                color: #111111;
+                @include media-m {
+                    margin-left: 53px;
+                }
+
+                span {
+                    color: #12919C;
+
+                    &.green {
+                        color: #82BF8C;
+                    }
                 }
             }
         }
