--- a/src/assets/scss/pages/__page-main.scss
+++ b/src/assets/scss/pages/__page-main.scss
@@ -1,14 +1,6 @@
 .slider {
-    height: calc(100vh - 90px);
     position: relative;
     z-index: 1;
-    @include media-m {
-        height: calc(100vh - 64px);
-    }
-    @media (max-height: 767px) {
-        height: auto;
-    }
-    
 
     &__container {
         position: relative;
@@ -20,6 +12,9 @@
         background-size: cover;
         background-repeat: no-repeat;
         z-index: 3;
+        @include media-s {
+            background-position: 10% 0;
+        }
     }
 
     &__buttons {
@@ -31,14 +26,44 @@
         bottom: 243px;
         right: 103px;
         z-index: 3;
-        @include media-m {
+        @include media-xl {
             width: calc(100% - 40px * 2);
             right: 40px;
+        }
+        @include media-m {
             bottom: 200px;
+        }
+        @include media-s {
+            width: calc(100% - 16px * 2);
+            right: 16px;
+            bottom: 105px;
         }
 
         svg {
             cursor: pointer;
+        }
+    }
+
+    &__progres {
+        position: relative;
+        width: 100%;
+        height: 8px;
+        background: url(/assets/img/slider-empty.svg);
+        margin: 0 7px;
+        z-index: 1;
+        overflow: hidden;
+
+        &_active {
+            background: url(/assets/img/slider-full.svg);
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 0%;
+            z-index: 2;
+            height: 8px;
+            width: 0;
+            overflow: hidden;
+            transition: all .1s linear;
         }
     }
 
@@ -52,12 +77,73 @@
         height: 100%;
         width: 100%;
     }
+
+    .slick-dotted.slick-slider {
+        margin-bottom: 0;
+    }
+
+    .slick-dots {
+        position: absolute;
+    }
+
+    .slick-dots {
+        position: absolute;
+        bottom: 70px;
+        right: 103px;
+        text-align: right;
+        @include media-xl {
+            right: 40px;
+        }
+        @include media-s {
+            right: 16px;
+            bottom: 27px;
+        }
+    }
+
+    .slick-dots li {
+        padding: 0;
+        height: 2px;
+        width: 15px;
+
+        button {
+            padding: 0;
+            height: 2px;
+            width: 15px;
+            position: relative;
+
+            &::before {
+                padding: 0;
+                height: 100%;
+                width: 100%;
+                top: 0%;
+                left: 0;
+                position: absolute;
+                line-height: 0;
+                color: transparent;
+                background-color: #fff;
+            }
+        }
+    }
 }
 
 .slide {
-    z-index: 3;
-    position: relative;
     padding: 74px 0;
+    height: calc(100vh - 90px);
+    z-index: 1;
+    display: flex !important;
+    flex-direction: column;
+    justify-content: flex-end;
+    @include media-m {
+        height: calc(100vh - 64px);
+    }
+    @media (max-height: 767px) {
+        height: auto;
+    }
+    @include media-s {
+        height: auto;
+        min-height: 603px;
+        padding: 32px 0;
+    }
 
     &::after {
         content: "";
@@ -74,6 +160,9 @@
 
     .wrapper {
         height: 100%;
+        @include media-s {
+            margin: 0;
+        }
     }
 
     &__content {
@@ -94,6 +183,10 @@
         letter-spacing: 0.3em;
         text-transform: uppercase;
         margin-bottom: 40px;
+        @include media-s {
+            font-size: 10px;
+            margin-bottom: 24px;
+        }
     }
 
     &__title {
@@ -101,6 +194,9 @@
         font-size: rem(64);
         line-height: 1;
         margin-bottom: 82px;
+        @include media-s {
+            font-size: 35px;
+        }
     }
 
     &__text {
@@ -109,6 +205,9 @@
         line-height: 1.3;
         margin-bottom: 50px;
         max-width: 955px;
+        @include media-s {
+            display: none;
+        }
     }
 }
 
@@ -118,11 +217,17 @@
     @include media-m {
         padding: 100px 0;
     }
+    @include media-s {
+        padding: 50px 0;
+    }
 
     &__list {
         margin-bottom: 150px;
         @include media-m  {
             margin-bottom: 100px;
+        }
+        @include media-s {
+            margin-bottom: 50px;
         }
     }
 }
@@ -132,9 +237,28 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
+    @include media-s {
+        display: flex;
+        flex-direction: column;
+    }
 
     &:not(:last-child) {
         margin-bottom: 100px;
+        @include media-s {
+            margin-bottom: 50px;
+        }
+    }
+
+    &:hover {
+        img {
+            transform: scale(1.05);
+        }
+
+        .event-item__banner {
+            &::after {
+                transform: scale(0.95);
+            }
+        }
     }
 
     &__banner {
@@ -150,6 +274,12 @@
         @include media-m {
             max-height: calc(895px - 895px * 0.6);
         }
+        @include media-s {
+            max-width: calc(100% -20px);
+            max-height: 100%;
+            margin-right: auto;
+            margin-bottom: 51px;
+        }
 
         &::after {
             content: "";
@@ -161,16 +291,22 @@
             width: 100%;
             height: 190px;
             z-index: 2;
+            transition: all .6s ease;
         }
 
         img {
             position: relative;
             z-index: 3;
+            transition: all .6s ease;
             @include media-xl {
                 max-height: calc(895px - 895px * 0.4);
             }
             @include media-m {
                 max-height: calc(895px - 895px * 0.6);
+            }
+            @include media-s {
+                max-width: 100%;
+                max-height: 100%;
             }
         }
     }
@@ -186,6 +322,12 @@
             max-width: 50%;
             width: auto;
         }
+        @include media-s {
+            max-width: 100%;
+            width: 100%;
+            padding: 0 39px;
+            margin: 0 auto;
+        }
     }
 
     &__data {
@@ -197,6 +339,10 @@
         @include media-xl {
             margin-bottom: 40px;
             font-size: rem(18);
+        }
+        @include media-s {
+            font-size: 13px;
+            margin-bottom: 10px;
         }
     }
 
@@ -213,6 +359,11 @@
         @include media-m {
             font-size: rem(42);
         }
+        @include media-s {
+            font-size: 18px;
+            margin-bottom: 30px;
+            max-width: 155px;
+        }
     }
 
     &__subtitle {
@@ -221,10 +372,18 @@
         line-height: 1.2;
         color: #111111;
         max-width: 360px;
+        @include media-s {
+            max-width: 225px;
+            font-size: 15px;
+        }
     }
 
     &:nth-child(2n) {
         flex-direction: row-reverse;
+        @include media-s {
+            display: flex;
+            flex-direction: column;
+        }
 
         .event-item__banner {
             &::after {
@@ -232,6 +391,10 @@
                 bottom: -4.5%;
                 left: -6.3%;
                 right: auto;
+                @include media-s {
+                    left: auto;
+                    right: -6.3%;
+                }
             }
         }
 
@@ -252,6 +415,9 @@
     @include media-m {
         padding: 100px 0;
     }
+    @include media-s {
+        padding: 50px 0;
+    }
 
     &__grid {
         display: grid;
@@ -261,6 +427,10 @@
         margin-bottom: 93px;
         @include media-xl {
             grid-template-rows: repeat(2, calc(805px - 805px * 0.6));
+        }
+        @include media-s {
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
         }
     }
 
@@ -286,6 +456,10 @@
     flex-direction: column;
     overflow: hidden;
     color: #fff;
+    @include media-s {
+        min-height: 442px;
+        background-position: 10% 10%;
+    }
 
     &__content {
         position: relative;
@@ -301,9 +475,16 @@
             padding: 15px;
             min-height: auto;
         }
+        @include media-s {
+            padding: 0 30px 27px;
+        }
 
         &_white {
             width: 100%;
+            @include media-s {
+                padding-top: 30px;
+                background: #fff;
+            }
         }
     }
 
@@ -313,6 +494,9 @@
         line-height: 1.3;
         @include media-xl {
             font-size: rem(20);
+        }
+        @include media-s {
+            font-size: 18px;
         }
     }
 
@@ -325,14 +509,28 @@
             margin-top: 24px;
             font-size: rem(16);
         }
+        @include media-s {
+            margin-top: 30px;
+            font-size: 13px;
+        }
     }
 
     &:nth-child(2) {
         grid-column: 2/3;
         grid-row: 1/3;
+        @include media-s {
+            grid-row: 1/2;
+            grid-column: auto;
+        }
 
         .sales-banner__content {
             max-width: 680px;
+        }
+        
+        .sales-banner__data {
+            @include media-s {
+                margin-top: 13px;
+            }
         }
     }
 
@@ -347,6 +545,9 @@
         max-height: 307px;
         pointer-events: none;
         transition: all 0.4s ease-out;
+        @include media-s {
+            max-height: 133px;
+        }
     }
 
     &:hover {
@@ -383,14 +584,14 @@
             max-width: none;
         }
 
-        &:hover {
-            &::after {
-                height: 120%;
-                background: rgba(26, 150, 161, 0.2);
-                max-height: none;
-                max-width: none;
-            }
-        }
+        // &:hover {
+        //     &::after {
+        //         height: 120%;
+        //         background: rgba(26, 150, 161, 0.2);
+        //         max-height: none;
+        //         max-width: none;
+        //     }
+        // }
     }
 }
 
@@ -399,10 +600,29 @@
     @include media-m {
         padding: 100px 0;
     }
+    @include media-s {
+        padding: 50px 0;
+    }
 
     &__hashtag {
         margin-top: -16%;
         margin-bottom: 66px;
+        @include media-s  {
+            margin: 0 0 30px;
+        }
+        
+
+        img {
+           @include media-s {
+                display: none;
+            } 
+        }
+        
+        svg {
+            @media (min-width: calc(#{$breakpoint-s} + 1px)) {
+                display: none;
+            }
+        }
     }
 }
 
