--- a/src/assets/scss/utils/__libs.scss
+++ b/src/assets/scss/utils/__libs.scss
@@ -1,2 +1,4 @@
+@import '../../../node_modules/slick-carousel/slick/slick-theme.css';
 @import '../../../node_modules/slick-carousel/slick/slick.css';
 @import '../../../node_modules/swiper/swiper-bundle.css';
+@import '../../../node_modules/aos/dist/aos.css';
